--- a/ProjectManagementSystem/src/main/resources/application.yml
+++ b/ProjectManagementSystem/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     username: root
     password: Rajat19081996&
     url: jdbc:mysql://localhost:3306/pms
+  jpa:
+    hibernate:
+      ddl-auto: update
 server:
   shutdown: graceful
   port: 6969
